--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "study-quasar",
   "version": "0.0.1",
   "description": "A Quasar Framework app",
-  "productName": "Quasar App",
+  "productName": "BloguiSpoti",
   "author": "AntaresT <luizeduardovbe@gmail.com>",
   "private": true,
   "scripts": {
@@ -14,7 +14,8 @@
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "quasar": "^2.0.0",
-    "vue-axios": "^3.3.7"
+    "vue-axios": "^3.3.7",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
